fix margin overflow

--- a/02-blog-preview/style.css
+++ b/02-blog-preview/style.css
@@ -1,5 +1,79 @@
 @import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 
+@layer reset {
+*,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+
+  /* https://kilianvalkhof.com/2022/css-html/your-css-reset-needs-text-size-adjust-probably/ */
+  html {
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
+  }
+
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  p,
+  figure,
+  blockquote,
+  dl,
+  dd {
+    margin: 0;
+  }
+
+  /* https://www.scottohara.me/blog/2019/01/12/lists-and-safari.html */
+  [role="list"] {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    line-height: 1.6;
+    height: 100vh;
+  }
+
+  h1,
+  h2,
+  h3,
+  button,
+  input,
+  label {
+    line-height: 1.1;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    text-wrap: balance;
+  }
+
+  p,
+  li {
+    text-wrap: pretty;
+  }
+
+  img,
+  picture {
+    max-inline-size: 100%;
+    display: block;
+  }
+
+  input,
+  button,
+  textarea,
+  select {
+    font: inherit;
+  }
+}
+
 @layer base {
   :root {
     --clr-yellow: hsl(47, 88%, 63%);
@@ -30,8 +104,8 @@
   .wrapper {
     display: grid;
     place-content: center;
-    height: 100dvh;
-    margin: 0.5rem;
+    height: 100vh;
+    margin: 0 1rem;
   }
 }
 
@@ -42,6 +116,7 @@
   border-radius: var(--radius-lg);
   border: 1px solid var(--clr-grey-950);
   filter: drop-shadow(10px 10px 0 var(--clr-grey-950));
+  margin-block-end: 1rem;
 
   @media (width < 375px) {
     width: 100%;
